--- a/src/index.html
+++ b/src/index.html
@@ -171,7 +171,7 @@
     addMessage('Hello!');
     addMessage('How can I assist you today?');
   </script>
-  <script src="script.js"> </script>
+  <script src="app.js"> </script>
 
 </body>
 
